select -webkit-appearance:none

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             min-height: 100vh;
             line-height: 1.5;
         }
+        select {
+            -webkit-appearance: none;
+            appearance: none; /* Include for cross-browser compatibility */
+        }
 
         .hidden {
             display: none !important;
