adds photo to web config

--- a/index.html
+++ b/index.html
@@ -825,9 +825,9 @@
                             <div class="panel-subtitle">Behavior Foundation</div>
                         </div>
                     </div>
-                    <textarea class="terminal-box" id="coreAxiomDisplay" style="resize: none; min-height: 100px;"></textarea>
+                    <img src="photo.png" class="rounded" alt="The team!" style="max-width:100%; border-radius: 8px; margin-bottom: 20px;">
+                    <textarea class="terminal-box" id="coreAxiomDisplay" style="resize: none; min-height: 100px; width: 100%"></textarea>
                 </div>
-
                 <!-- Default Settings Panel -->
                 <div class="panel" id="defaultSettingsPanel">
                     <div class="panel-header">
