small image tweaks

--- a/index.html
+++ b/index.html
@@ -825,8 +825,11 @@
                             <div class="panel-subtitle">Behavior Foundation</div>
                         </div>
                     </div>
-                    <img src="photo.png" class="rounded" alt="The team!" style="max-width:100%; border-radius: 8px; margin-bottom: 20px;">
-                    <textarea class="terminal-box" id="coreAxiomDisplay" style="resize: none; min-height: 100px; width: 100%"></textarea>
+                    <div>
+                        <div class="panel-subtitle" style="margin-bottom:10px;">The Core Team</div>
+                        <img src="photo.png" class="rounded" alt="The Core Team: Alpha, Beta, Gamma, Deta, Epsilon & Echo" style="max-width:100%; border-radius: 8px; margin-bottom: 20px;">
+                    </div>
+                    <textarea class="terminal-box" id="coreAxiomDisplay" style="resize: none; min-height: 180px; width: 100%"></textarea>
                 </div>
                 <!-- Default Settings Panel -->
                 <div class="panel" id="defaultSettingsPanel">
