--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                     </div>
                     <div>
                         <div class="panel-subtitle" style="margin-bottom:10px;">The Core Team</div>
-                        <img src="photo.png" class="rounded" alt="The Core Team: Alpha, Beta, Gamma, Deta, Epsilon & Echo" style="max-width:100%; border-radius: 8px; margin-bottom: 20px;">
+                        <img src="photo.png" class="rounded" title="The Core Team: Alpha, Beta, Gamma, Deta, Epsilon & Echo" alt="The Core Team: Alpha, Beta, Gamma, Deta, Epsilon & Echo" style="max-width:100%; border-radius: 8px; margin-bottom: 20px;">
                     </div>
                     <textarea class="terminal-box" id="coreAxiomDisplay" style="resize: none; min-height: 180px; width: 100%"></textarea>
                 </div>
