adds redshift mode

--- a/index.html
+++ b/index.html
@@ -773,8 +773,8 @@
         <!-- Header -->
         <header class="header">
             <h1>echOS CONFIGURATION</h1>
-            <p>Persona Management System v3.4.0</p>
-            <a href="#" id="repoLink">[project]</a>
+            <p>Persona Management System v3.5.0</p>
+            <a href="#" id="repoLink">[repository]</a>
         </header>
 
         <!-- Status Bar -->
@@ -1150,7 +1150,7 @@
             getDefaultConfig() {
                 return {
                     name: "echOS",
-                    version: "3.4.0",
+                    version: "3.5.0",
                     core_axiom: "Default axiom not loaded",
                     personas: [],
                     boundary_pushing_framework: {},
