--- a/index.html
+++ b/index.html
@@ -845,8 +845,8 @@
                         <div class="panel-subtitle" style="margin-bottom:10px;">
                             The Core Team</div>
                         <img src="photo.png" class="rounded"
-                            title="The Core Team: Alpha, Beta, Gamma, Deta, Epsilon & Echo"
-                            alt="The Core Team: Alpha, Beta, Gamma, Deta, Epsilon & Echo"
+                            title="The Core Team: Alpha, Beta, Gamma, Delta, Epsilon... & Echo"
+                            alt="The Core Team: Alpha, Beta, Gamma, Delta, Epsilon... & Echo"
                             style="max-width:100%; border-radius: 12px; margin-bottom: 20px; padding: 4px;">
                     </div>
                     <textarea class="terminal-box" id="coreAxiomDisplay"
