fixes repo link

--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
         <header class="header">
             <h1>echOS CONFIGURATION</h1>
             <p>Persona Management System v4.0.0</p>
-            <a href="#" id="repoLink">[repository]</a>
+            <a href="https://github.com/sudofx/echOS" id="repoLink">[repository]</a>
         </header>
 
         <!-- Status Bar -->
